<resources>
    <string name="app_name">FirebaseTutorial</string>
    <string name="action_settings">Settings</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="full_name">Name</string>
    <string name="dob">DOB</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="game">Game</string>
    <string name="address">Address</string>
    <string name="awards">Awards</string>
    <string name="add_player">Add Player</string>
    <string name="saved_message">Saved successfully!</string>
    <string name="fill_empty_field">Please fill the empty fields</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_up">Sign up </string>
    <string name="action_sign_up_failed">Sign up failed!!</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
